# lwg-replays

./: .gitignore  LICENSE  README.md
.github/gha_scripts/: build_manifest.py  check_and_sync.sh  commit_changes.sh  run_indexer.sh  setup_poetry.sh  setup_rclone.sh  sync_replays.sh  test_local.sh  trigger_pages.sh
.github/workflows/: sync-replays.yml
discord-sync/: .env.example  README.md  pyproject.toml  test_discord.py
docs/: index.html  styles.css
docs/css/: style.css  styles.css
docs/js/: main.js  replayBrowser.js  timeline.js
docs/replays/: .sync-manifest.json  index.json
docs/replays/ce_replay_folder/CE Replay Folder/: 11worker5raider.json  12worker5raider.json  2den followup to punish 3rax2base archer allin_v_DESTROYcall_on_Ravaged (2).json  3den if he not move out he holds_v_Haffey_on_Ravaged (2).json  Aicy_v_ConsciouslyEating_on_Darkwood Hills LE.json  Aicy_v_ConsciouslyEating_on_Past Purity.json  AustriaNoob_v_KendrickKnight_on_Past Purity.json  BeatFlitz_v_Satocastor_on_Mirrored Mire LE.json  BeatFlitz_v_Satocastor_on_Ravaged.json  BeatFlitz_v_derStef1991_on_Little Ohana.json  Bly4Egg_v_BeatFlitz_on_Ravaged.json  Bly4Egg_v_DESTROYcall_on_Ravaged.json  Bly4Egg_v_Highdra_x_on_Ravaged.json  Bly4Egg_v_Ninja5511_on_Ravaged.json  Bly4Egg_v_SlammerIV_on_Mirrored Mire LE.json  Charger_v_IIIlllIII_on_Ravaged.json  (+183 more)
lwg-replay-indexer/: pyproject.toml  run.sh
lwg-replay-indexer/lwg_replay_indexer/: indexer.py
lwg-replay-indexer/lwg_replay_indexer/tests/: test_indexer.py
lwg-replay-indexer/lwg_replay_indexer/tests/fixtures/: live_index_snapshot.json
(+790 files in other folders)
