[tool.poetry]
name = "lwg-replay-indexer"
version = "0.1.0"
description = "Little War Game replay file indexer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
index-replays = "lwg_replay_indexer.indexer:main"
